--- a/package.json
+++ b/package.json
@@ -6,11 +6,30 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-preset-stage-3": "6.24.1",
+    "babel-register": "6.26.0",
+    "bootstrap": "4.3.1",
+    "chai": "4.2.0",
+    "chai-as-promised": "7.1.1",
+    "chai-bignumber": "3.0.0",
+    "crypto-browserify": "^3.12.0",
+    "ethers": "^5.6.9",
+    "identicon.js": "^2.3.3",
+    "node-polyfill-webpack-plugin": "^2.0.0",
     "react": "^18.1.0",
+    "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "truffle": "5.1.39",
+    "web-vitals": "^2.1.4",
+    "web3": "^1.2.11"
   },
   "scripts": {
     "start": "react-scripts start",
